golden/error/_import_clean_env.rcl
// This variable is not defined here. Even if it is defined at the place where
// we import this document, it should still cause evaluation to fail.
x
